<resources>
    <string name="app_name">Albassami Logistics</string>
    <string name="welcom_btn">Get Started</string>
    <string name="app_title">Albassami</string>
    <string name="login_email">Email Address</string>
    <string name="login_Password">Password</string>
    <string name="login_btn">Sign In</string>
    <string name="forgot_pass_btn">Forgot Password?</string>
    <string name="new_user_btn">New User?</string>
    <string name="req_pass_btn">Request Password</string>
    <string name="register_btn">Register</string>
    <string name="forgot_txt_note">Please Enter Email Id to Receive Password</string>
    <string name="first_name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="phn_no">Phone Number</string>
    <string name="txt_select_country">Select Country</string>
    <string name="txt_select_currency">Select Currency</string>
    <string name="login_cancelled">login cancelled</string>
    <string name="login_failed">login failed</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_save">SAVE</string>
    <string name="dialog_exit_caps">EXIT</string>
    <string name="dialog_exit_text">Are you sure ?</string>
    <string name="txt_current_loc">Your Location</string>
    <string name="txt_pickup_loc">Set Pickup location</string>
    <string name="txt_set_drop_loc">Set Drop location</string>
    <string name="txt_drop_loc">Drop Location</string>
    <string name="txt_types_title">Available Cars</string>
    <string name="txt_types_payment">Cash</string>
    <string name="txt_logistics">Logistics</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="trip_summary">TRIP SUMMARY</string>
    <string name="rate_ride">RATE YOUR RIDE</string>
    <string name="town_loc">Small truck between the cities</string>
    <string name="label">label</string>
    <string name="door_to_door">HomeDelivery</string>
    <string name="delivery_home_desc">Add Services Door To Door</string>
    <string name="add">add</string>
    <string name="car">Car</string>
    <string name="car_transportation">Car Transportation</string>
    <string name="car_shipping">Car Shipping</string>
    <string name="towing_service">Towing Service</string>
    <string name="other_service">Other Services</string>
    <string name="towing_detail">Towing Detail</string>
    <string name="towing">Towing</string>
    <string name="intercity">Internal</string>
    <string name="intercity_description">Choose you destination. Please select branch below according to region</string>
    <string name="intercity_destination">Internal (Arrival To)</string>
    <string name="form_detail">Please Fill the form with correct information</string>
    <string name="form_detail_door_to_door">Please specify the shipment agreement number and the required service, and the service value will be added to the shipment agreement</string>
    <string name="idnumber_owner">Owner Id Number</string>
    <string name="intercity_source">Internal (Shipping From)</string>
    <string name="international">International</string>
    <string name="nationallty_owner">Owner Nationality</string>
    <string name="special_towing">Special Towing</string>
    <string name="full_load">Full Load (Cars)</string>
    <string name="door_to">Door-2-Door</string>
    <string name="order_summary">Order Summary</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="add_vehicles">Add Vehicle</string>
    <string name="phone">Phone</string>
    <string name="sender">Sender</string>
    <string name="contract_number">Contract Number</string>
    <string name="receiver">Receiver</string>
    <string name="r_mobile">R. Mobile</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="vehicle">Vehicle</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_color">Car Color</string>
    <string name="car_year">Car Year</string>
    <string name="select_car">Select Car</string>
    <string name="receiver_name">Enter Receiver Name</string>
    <string name="sender_name">Enter Sender Name</string>
    <string name="receiver_mobile">Enter Receiver Mobile Number</string>
    <string name="receiver_nationality">Select Receiver nationality</string>
    <string name="receiver_id_number">Enter Receiver National ID</string>
    <string name="receiver_visa_number">Enter Receiver Visa Number</string>
    <string name="model">Model</string>
    <string name="service">Service</string>
    <string name="time">Time</string>
    <string name="pick_up_from_home">Home \n Pick Up</string>
    <string name="deliver_to_home">Home \n Delivery</string>
    <string name="delivery_home">Home Delivery</string>
    <string name="delivery_home1">Home Delivery</string>
    <string name="cost">other service Cost</string>
    <string name="total_cost">Total with tax </string>
    <string name="total_cost_door_to_door"> Amount with Tax 172.50  </string>
    <string name="card_detail">Agreement Details</string>
    <string name="p_card_detail">Payment Details</string>
    <string name="albassami_text">Al Bassami Transport</string>
    <string name="albassami_covered">Al Bassami got you Covered!</string>
    <string name="choose_service">Choose from our service.</string>
    <string name="cars_detail_form">Car Detail Form</string>
    <string name="inter_correct_info">Please fill in the form with correct information</string>
    <string name="secure_payment_gateway">Secure Payment Gateway</string>
    <string name="card_name">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="branches_from">Branches From</string>
    <string name="branches_to">Branches To</string>
    <string name="save_card">Save card for next time</string>
    <string name="cvv_hint">Your CVV is the last three digits in the signature strip on the back of your card</string>
    <string name="agreement_number">Agreement Number</string>
    <string name="branch">Branch</string>
    <string name="towing_type">Towing Type</string>
    <string name="reciept_place">Reciept Location</string>
    <string name="confirm">Confirm</string>
    <string name="pay_now">Pay Now</string>
    <string name="register">Register</string>
    <string name="payment_method">Payment Method</string>
    <string name="waiting_for_driver">Waiting for driver accept</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_select_time">Select Date and time</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="no_internet">Internet not available</string>
    <string name="dialog_no_inter_message">You have not active internet connection.</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
    <string name="txt_mobile_error">Please Enter Mobile number!</string>
    <string name="txt_fname_error">Please Enter First name!</string>
    <string name="txt_lname_error">Please Enter Last name!</string>
    <string name="txt_incorrect_error">Incorrect Email id!</string>
    <string name="txt_picture_error">Please choose profile picture!</string>
    <string name="txt_phone_error">Please Enter phone number!</string>
    <string name="txt_pass8_error">Password must be at least 8 character!</string>
    <string name="txt_email_error">Please Enter Email ID!</string>
    <string name="txt_pass_error">Please Enter Password!</string>
    <string name="txt_drivers_error">There are no drivers available in this service type!</string>
    <string name="txt_load">Loading...</string>
    <string name="txt_confirm">Confirming...</string>
    <string name="txt_signin">Signing in...</string>
    <string name="reg_load">Registering...</string>
    <string name="updating_pro_load">Updating profile...</string>
    <string name="req_pass_load">Requesting Password...</string>
    <string name="my_home">Home</string>
    <string name="my_payment">Add Payment Options</string>
    <string name="nikola_wallet">Wallet</string>
    <string name="my_free_ride">Free Rides</string>
    <string name="ask_bot">Ask Bot</string>
    <string name="ride_history">Ride History</string>
    <string name="my_promo">Promos</string>
    <string name="later_rides">Your Scheduled Rides</string>
    <string name="my_help">Help</string>
    <string name="txt_logout">Logout</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="logout_text">Are you sure you want to Signout?</string>
    <string name="txt_gmail">Connecting Gmail!</string>
    <string name="update_success_text">Profile Updated Successfully</string>
    <string name="language">English</string>
    <string-array name="currency">
        <item>USD</item>
        <item>INR</item>
    </string-array>
    <string name="facebook_api_id">1282522678496595</string>
    <string name="sender_id">977814766140</string>
    <string name="google_appId">942850374226</string>
    <string name="map_key">AIzaSyCxzGfmlKSw1NA5lQuLUUVSmc_ae3_5GVY</string>
    <string name="txt_slct_option">Choose Picture</string>
    <string name="txt_gellery">Gallery</string>
    <string name="txt_cameray">Camera</string>
    <string name="txt_warning">( Disabled to avoid Vandalism of Demo )</string>
    <string name="txt_img_error">unable to select image!</string>
    <string name="txt_current_location">Set Pickup Location</string>
    <string name="txt_symbol_dot">\u25CF</string>
    <string name="txt_symbol_square">\u25A0</string>
    <string name="txt_dest_hint">Destination</string>
    <string name="txt_req_cab">Request Taxi</string>
    <string name="txt_success_forgot_password">Password Sent successfully to Registered Mail Id! </string>
    <string name="txt_approx_fare">Approximate Fare</string>
    <string name="txt_cost_dis_fare">Cost / km </string>
    <string name="txt_tot_dis">Approximate dis.</string>
    <string name="txt_cost_min_fare">Cost / Min </string>
    <string name="txt_btn_done">Done</string>
    <string name="txt_fare_note">Long press on Car icon to get Approximate fare!</string>
    <string name="txt_pickup_address">Pickup Address</string>
    <string name="txt_drop_address">Drop Address</string>
    <string name="txt_sub_rating">Submit</string>
    <string name="txt_cancel">Cancel</string>
    <string name="et_promocode">Enter Promo Code</string>
    <string name="btn_apply_promo">Apply Promo</string>
    <string name="cvv">CVV</string>
    <string name="txt_otp_note">You will have your OTP sent to the following mobile number!</string>
    <string name="txt_otp_demo">For demo purpose we have pre-filled the Verification code,please click Proceed!</string>
    <string name="txt_no_otp">Not received your Otp? Resend</string>
    <string name="txt_resend">RESEND</string>
    <string name="txt_proceed">Proceed</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_password_desc">enter you email id</string>
    <string name="email_address">email address</string>
    <string name="send_mail">Send mail</string>
    <string name="noInternetMessage">You do not have an established internet connection. Please check you internet and try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="close">Close</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="otp">Otp</string>
    <string name="get_otp">Get Otp</string>
    <string name="verificationcode">verification code</string>
    <string name="pleaseentertheotpthatsentin">The verification code has been sent to \n</string>
</resources>