<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingTop="25dp"
    android:paddingEnd="25dp"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/closeBtn"
        android:background="@drawable/close"/>

    <TextView
        style="@style/HeadingTextStyleColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        fontPath="fonts/rental_bold.ttf"
        android:text="@string/forgot_password_text"
        tools:ignore="MissingPrefix" />

    <TextView
        style="@style/NormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        fontPath="fonts/rental_normal.ttf"
        android:text="@string/forgot_password_desc"
        android:textSize="18dp"
        android:textStyle="normal"
        tools:ignore="MissingPrefix" />

    <EditText
        android:id="@+id/yourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/email_address"
        android:backgroundTint="@color/colorAccent"
        android:singleLine="true"
        fontPath="fonts/rental_normal.ttf"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/sendConfirmationEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        fontPath="fonts/rental_normal.ttf"
        android:layout_marginTop="30dp"
        android:text="@string/send_mail"
        tools:ignore="MissingPrefix" />
</LinearLayout>