<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <com.albassami.logistics.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_number"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" />

    <com.albassami.logistics.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="@string/txt_otp_note"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:layout_marginStart="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@drawable/drawable_edittext_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:weightSum="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:gravity="center"
            app:contentColor="@color/black"
            android:paddingLeft="5dp"
            app:defaultNameCode="US"
            app:textSize="18sp"
            android:paddingStart="5dp" />

        <com.albassami.logistics.NewUtilsAndPref.CustomText.CustomRegularEditView
            android:id="@+id/et_otp_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="0.8"
            android:enabled="false"
            android:paddingRight="20dp"
            android:paddingLeft="5dp"
            android:maxLength="16"
            android:backgroundTint="@color/transparent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/phn_no"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingEnd="20dp"
            android:paddingStart="5dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_edit_number"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center|end"
        android:padding="10dp"
        android:tint="@color/black"
        android:layout_marginEnd="20dp" />

    </LinearLayout>

    <com.albassami.logistics.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/get_otp"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:id="@+id/getOtp"
        android:textSize="18sp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="70dp" />

    <com.albassami.logistics.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:id="@+id/otpDemoNote"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/txt_otp_demo"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:layout_marginStart="10dp" />

        <com.albassami.logistics.NewUtilsAndPref.CustomText.CustomRegularEditView
            android:id="@+id/user_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp"
            android:inputType="text"
            android:maxLength="10"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/drawable_edittext_background"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            android:paddingStart="15dp"
            android:layout_marginStart="20dp"
            android:paddingEnd="15dp" />

        <com.albassami.logistics.NewUtilsAndPref.CustomText.CustomRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_otp"
            android:id="@+id/notRecevied"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:layout_marginEnd="20dp" />

            <Button
                android:id="@+id/btn_confirm_otp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorAccent"
                android:text="@string/txt_proceed"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginTop="50dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp" />

    </LinearLayout>