<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment.sign_in_code">

    <TextView
        android:id="@+id/textofphonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="190dp"
        android:text="@string/verificationcode"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textofphonenumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="@string/pleaseentertheotpthatsentin"
        android:textColor="#000000"
        android:textSize="16dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/txt_resend"
        android:textColor="#4CAF50"
        android:textSize="16dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/resend2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="60"
        android:textColor="#000000"
        android:textSize="16dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/txt_pin_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="75dp"
        android:cursorVisible="false"
        android:digits="0123456789"
        android:inputType="number"
        android:layoutDirection="ltr"
        android:maxLength="6"
        android:textSize="20sp"
        app:pinLineColors="#000"></com.alimuzaffar.lib.pin.PinEntryEditText>


</FrameLayout>